--- a/index.html
+++ b/index.html
@@ -23,28 +23,25 @@
         />
         <p>Gabriel Branco</p>
       </div>
-      <ul>
-        <li>
-          <ion-icon name="logo-github"></ion-icon> 
-           <a href="https://github.com/gabrielbranco011" target="_blank" 
-            >Github</a 
-          > 
-        </li>
-        <li>
-          <a
-            href="https://www.linkedin.com/in/gabriel-branco-rodrigues-bb7b21178/"
-            target="_blank"
-            >Linkedin</a
-          >
-        </li>
-      </ul>
-      <div id="social-links">
-<ion-icon name="logo-html5"></ion-icon>
-<ion-icon name="logo-javascript"></ion-icon>
-<ion-icon name="logo-nodejs"></ion-icon>
-<ion-icon name="logo-python"></ion-icon>
-<ion-icon name="logo-react"></ion-icon>
+    <div class="links">
+        <div class="icon">
+          <ion-icon name="logo-github"></ion-icon>    
+        </div>
+        <div class="link-personal">
+          <a href="https://github.com/gabrielbranco011" target="_blank">Github</a>
+        </div>
       </div>
+      <div class="links">
+        <div class="link-personal">
+          <a href="https://www.linkedin.com/in/gabriel-branco-rodrigues-bb7b21178/" target="_blank">Linkedin</a>
+        </div>
+      </div>      
+      <div id="social-links">
+        <ion-icon name="logo-html5"></ion-icon>
+        <ion-icon name="logo-javascript"></ion-icon>
+        <ion-icon name="logo-nodejs"></ion-icon>
+        <ion-icon name="logo-python"></ion-icon>
+        <ion-icon name="logo-react"></ion-icon>
       </div>
     </div>
 
