--- a/index.html
+++ b/index.html
@@ -23,19 +23,33 @@
         />
         <p>Gabriel Branco</p>
       </div>
-    <div class="links">
+      <div id="switch">
+        <button></button>
+        <span></span>
+      </div>
+
+      <div class="links">
         <div class="icon">
-          <ion-icon name="logo-github"></ion-icon>    
+          <ion-icon name="logo-github"></ion-icon>
         </div>
         <div class="link-personal">
-          <a href="https://github.com/gabrielbranco011" target="_blank">Github</a>
+          <a href="https://github.com/gabrielbranco011" target="_blank"
+            >Github</a
+          >
         </div>
       </div>
       <div class="links">
-        <div class="link-personal">
-          <a href="https://www.linkedin.com/in/gabriel-branco-rodrigues-bb7b21178/" target="_blank">Linkedin</a>
+        <div class="icon">
+          <ion-icon name="logo-linkedin"></ion-icon>
         </div>
-      </div>      
+        <div class="link-personal">
+          <a
+            href="https://www.linkedin.com/in/gabriel-branco-rodrigues-bb7b21178/"
+            target="_blank"
+            >Linkedin</a
+          >
+        </div>
+      </div>
       <div id="social-links">
         <ion-icon name="logo-html5"></ion-icon>
         <ion-icon name="logo-javascript"></ion-icon>
@@ -45,7 +59,13 @@
       </div>
     </div>
 
-    <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
-<script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
+    <script
+      type="module"
+      src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"
+    ></script>
+    <script
+      nomodule
+      src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"
+    ></script>
   </body>
 </html>
